--- a/12-serialization-attacks/model_serializarion_attack.ipynb
+++ b/12-serialization-attacks/model_serializarion_attack.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# !pip install -q modelscan\n",
-    "# !modelscan -v"
+    "# !/home/ubuntu/setup/ai-sec-env/bin/modelscan -v"
    ]
   },
   {
@@ -163,7 +163,7 @@
     }
    ],
    "source": [
-    "!modelscan -p ./very_safe_inception_model.h5"
+    "!/home/ubuntu/setup/ai-sec-env/bin/modelscan -p ./very_safe_inception_model.h5"
    ]
   },
   {
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "!modelscan -p ./unsafe_model.h5"
+    "!/home/ubuntu/setup/ai-sec-env/bin/modelscan -p ./unsafe_model.h5"
    ]
   },
   {
@@ -367,7 +367,7 @@
    ],
    "source": [
     "# This will save the scan results in file: keras-model-scan-results.json\n",
-    "!modelscan --path  ./unsafe_model.h5 -r json -o keras-model-scan-results.json"
+    "!/home/ubuntu/setup/ai-sec-env/bin/modelscan --path  ./unsafe_model.h5 -r json -o keras-model-scan-results.json"
    ]
   },
   {
