fixed abs path and added lab to LIME

--- a/08-adversarial_inception/attack_inception.ipynb
+++ b/08-adversarial_inception/attack_inception.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "a65e71c9-c9e5-4fba-b578-d19f50a72501",
    "metadata": {},
    "outputs": [
@@ -239,19 +239,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-02-22 13:06:20.034732: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-22 13:06:20.083100: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-02-22 13:06:20.083521: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-08 12:07:05.486658: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:07:05.534538: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:07:05.534990: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-22 13:06:20.822283: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "2025-06-08 12:07:06.264391: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "WARNING:tensorflow:From /home/ubuntu/setup/ai-sec-env/lib/python3.8/site-packages/keras/src/layers/normalization/batch_normalization.py:883: _colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Colocations handled automatically by placer.\n",
-      "2025-02-22 13:06:27.252732: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:375] MLIR V1 optimization pass is not enabled\n",
-      "2025-02-22 13:06:27.725282: W tensorflow/c/c_api.cc:304] Operation '{name:'predictions/bias/Assign' id:5615 op device:{requested: '', assigned: ''} def:{{{node predictions/bias/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](predictions/bias, predictions/bias/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      "2025-06-08 12:07:12.605228: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:375] MLIR V1 optimization pass is not enabled\n",
+      "2025-06-08 12:07:13.081892: W tensorflow/c/c_api.cc:304] Operation '{name:'batch_normalization_89/moving_mean/Assign' id:5318 op device:{requested: '', assigned: ''} def:{{{node batch_normalization_89/moving_mean/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](batch_normalization_89/moving_mean, batch_normalization_89/moving_mean/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
       "/home/ubuntu/setup/ai-sec-env/lib/python3.8/site-packages/keras/src/engine/training_v1.py:2359: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
       "  updates=self.state_updates,\n",
-      "2025-02-22 13:06:29.616504: W tensorflow/c/c_api.cc:304] Operation '{name:'predictions/Softmax' id:5621 op device:{requested: '', assigned: ''} def:{{{node predictions/Softmax}} = Softmax[T=DT_FLOAT, _has_manual_control_dependencies=true](predictions/BiasAdd)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      "2025-06-08 12:07:15.031057: W tensorflow/c/c_api.cc:304] Operation '{name:'predictions/Softmax' id:5621 op device:{requested: '', assigned: ''} def:{{{node predictions/Softmax}} = Softmax[T=DT_FLOAT, _has_manual_control_dependencies=true](predictions/BiasAdd)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
       "\n",
       "\n",
       "\n",
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "! python ./predict_inception.py adversarial_sample/hacked_ele.png"
+    "!~/setup/ai-sec-env/bin/python ./predict_inception.py adversarial_sample/hacked_ele.png"
    ]
   }
  ],
