--- a/12-serialization-attacks/model_serializarion_attack.ipynb
+++ b/12-serialization-attacks/model_serializarion_attack.ipynb
@@ -26,12 +26,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:28:15.365786: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-08 12:08:48.360807: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:08:48.410529: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:08:48.411756: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-11-05 16:28:15.891456: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "2024-11-05 16:28:16.656248: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-11-05 16:28:16.676629: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2024-11-05 16:28:16.677911: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:995] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n"
+      "2025-06-08 12:08:49.143256: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -66,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /home/adversarial_nik/ai_sec/venv/lib/python3.8/site-packages/keras/src/layers/normalization/batch_normalization.py:883: _colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From /home/ubuntu/setup/ai-sec-env/lib/python3.8/site-packages/keras/src/layers/normalization/batch_normalization.py:883: _colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Colocations handled automatically by placer.\n"
      ]
@@ -75,9 +74,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:28:30.643972: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:375] MLIR V1 optimization pass is not enabled\n",
-      "2024-11-05 16:28:31.045448: W tensorflow/c/c_api.cc:304] Operation '{name:'conv2d_43/kernel/Assign' id:2571 op device:{requested: '', assigned: ''} def:{{{node conv2d_43/kernel/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](conv2d_43/kernel, conv2d_43/kernel/Initializer/stateless_random_uniform)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
-      "/home/adversarial_nik/ai_sec/venv/lib/python3.8/site-packages/keras/src/engine/training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "2025-06-08 12:08:55.708097: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:375] MLIR V1 optimization pass is not enabled\n",
+      "2025-06-08 12:08:56.185009: W tensorflow/c/c_api.cc:304] Operation '{name:'batch_normalization_54/moving_variance/Assign' id:3240 op device:{requested: '', assigned: ''} def:{{{node batch_normalization_54/moving_variance/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](batch_normalization_54/moving_variance, batch_normalization_54/moving_variance/Initializer/ones)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n",
+      "/home/ubuntu/setup/ai-sec-env/lib/python3.8/site-packages/keras/src/engine/training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
       "  saving_api.save_model(\n"
      ]
     }
@@ -103,16 +102,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/adversarial_nik/ai_sec/venv/lib/python3.8/site-packages/keras/src/engine/training_v1.py:2359: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
+      "/home/ubuntu/setup/ai-sec-env/lib/python3.8/site-packages/keras/src/engine/training_v1.py:2359: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
       "  updates=self.state_updates,\n",
-      "2024-11-05 16:28:57.894607: W tensorflow/c/c_api.cc:304] Operation '{name:'predictions/Softmax' id:5621 op device:{requested: '', assigned: ''} def:{{{node predictions/Softmax}} = Softmax[T=DT_FLOAT, _has_manual_control_dependencies=true](predictions/BiasAdd)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
+      "2025-06-08 12:09:20.880315: W tensorflow/c/c_api.cc:304] Operation '{name:'predictions/Softmax' id:5621 op device:{requested: '', assigned: ''} def:{{{node predictions/Softmax}} = Softmax[T=DT_FLOAT, _has_manual_control_dependencies=true](predictions/BiasAdd)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[92m[[('n02504013', 'Indian_elephant', 0.938795), ('n01871265', 'tusker', 0.019437142), ('n01704323', 'triceratops', 0.010561382)]]\u001b[0m\n"
+      "\u001b[92m[[('n02504013', 'Indian_elephant', 0.93879485), ('n01871265', 'tusker', 0.019437166), ('n01704323', 'triceratops', 0.010561407)]]\u001b[0m\n"
      ]
     }
    ],
@@ -149,12 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:29:09.601222: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-08 12:09:22.626094: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:09:22.674553: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:09:22.675003: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-11-05 16:29:16.747365: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "No settings file detected at /home/adversarial_nik/ai_sec/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
+      "2025-06-08 12:09:23.426731: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "No settings file detected at /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
       "\n",
-      "Scanning /home/adversarial_nik/ai_sec/12-serialization-attacks/very_safe_inception_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
+      "Scanning /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/very_safe_inception_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
       "\n",
       "\u001b[34m--- Summary ---\u001b[0m\n",
       "\n",
@@ -163,7 +164,7 @@
     }
    ],
    "source": [
-    "!modelscan -p ./very_safe_inception_model.h5"
+    "!~/setup/ai-sec-env/bin/modelscan -p ./very_safe_inception_model.h5"
    ]
   },
   {
@@ -184,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:29:32.256458: W tensorflow/c/c_api.cc:304] Operation '{name:'batch_normalization_15_1/moving_variance/Assign' id:7879 op device:{requested: '', assigned: ''} def:{{{node batch_normalization_15_1/moving_variance/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](batch_normalization_15_1/moving_variance, batch_normalization_15_1/moving_variance/Initializer/ones)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
+      "2025-06-08 12:09:35.830632: W tensorflow/c/c_api.cc:304] Operation '{name:'conv2d_37_1/kernel/Assign' id:9185 op device:{requested: '', assigned: ''} def:{{{node conv2d_37_1/kernel/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](conv2d_37_1/kernel, conv2d_37_1/kernel/Initializer/stateless_random_uniform)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
      ]
     },
     {
@@ -250,7 +251,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:30:20.024996: W tensorflow/c/c_api.cc:304] Operation '{name:'batch_normalization_37_2/moving_variance/Assign' id:16376 op device:{requested: '', assigned: ''} def:{{{node batch_normalization_37_2/moving_variance/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](batch_normalization_37_2/moving_variance, batch_normalization_37_2/moving_variance/Initializer/ones)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
+      "2025-06-08 12:10:33.701430: W tensorflow/c/c_api.cc:304] Operation '{name:'batch_normalization_70_2/beta/Assign' id:18578 op device:{requested: '', assigned: ''} def:{{{node batch_normalization_70_2/beta/Assign}} = AssignVariableOp[_has_manual_control_dependencies=true, dtype=DT_FLOAT, validate_shape=false](batch_normalization_70_2/beta, batch_normalization_70_2/beta/Initializer/zeros)}}' was changed by setting attribute after it was run by a session. This mutation will have no effect, and will trigger an error in the future. Either don't modify nodes after running them or create a new session.\n"
      ]
     },
     {
@@ -258,7 +259,7 @@
      "output_type": "stream",
      "text": [
       "WARNING:tensorflow:No training configuration found in the save file, so the model was *not* compiled. Compile it manually.\n",
-      "\u001b[92m[[('n02504013', 'Indian_elephant', 0.938795), ('n01871265', 'tusker', 0.019437142), ('n01704323', 'triceratops', 0.010561382)]]\u001b[0m\n"
+      "\u001b[92m[[('n02504013', 'Indian_elephant', 0.93879485), ('n01871265', 'tusker', 0.019437166), ('n01704323', 'triceratops', 0.010561407)]]\u001b[0m\n"
      ]
     }
    ],
@@ -288,12 +289,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:30:27.839178: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-08 12:10:37.298974: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:10:37.347884: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:10:37.348386: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-11-05 16:30:28.690205: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "No settings file detected at /home/adversarial_nik/ai_sec/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
+      "2025-06-08 12:10:38.103483: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "No settings file detected at /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
       "\n",
-      "Scanning /home/adversarial_nik/ai_sec/12-serialization-attacks/unsafe_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
+      "Scanning /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/unsafe_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
       "\n",
       "\u001b[34m--- Summary ---\u001b[0m\n",
       "\n",
@@ -313,12 +316,12 @@
       "Unsafe operator found:\n",
       "  - Severity: MEDIUM\n",
       "  - Description: Use of unsafe operator 'Lambda' from module 'Keras'\n",
-      "  - Source: /home/adversarial_nik/ai_sec/12-serialization-attacks/unsafe_model.h5\n"
+      "  - Source: /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/unsafe_model.h5\n"
      ]
     }
    ],
    "source": [
-    "!modelscan -p ./unsafe_model.h5"
+    "!~/setup/ai-sec-env/bin/modelscan -p ./unsafe_model.h5"
    ]
   },
   {
@@ -347,16 +350,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-11-05 16:30:37.682838: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-06-08 12:10:39.885425: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:10:39.933589: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-08 12:10:39.934052: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-11-05 16:30:38.253232: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "No settings file detected at /home/adversarial_nik/ai_sec/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
+      "2025-06-08 12:10:40.690438: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "No settings file detected at /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/modelscan-settings.toml. Using defaults. \n",
       "\n",
-      "Scanning /home/adversarial_nik/ai_sec/12-serialization-attacks/unsafe_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
+      "Scanning /home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks/unsafe_model.h5 using modelscan.scanners.H5LambdaDetectScan model scan\n",
       "\u001b[1m{\u001b[0m\u001b[32m\"summary\"\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m\"total_issues_by_severity\"\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m\"LOW\"\u001b[0m: \u001b[1;36m0\u001b[0m, \u001b[32m\"MEDIUM\"\u001b[0m: \u001b[1;36m1\u001b[0m, \u001b[32m\"HIGH\"\u001b[0m: \u001b[1;36m0\u001b[0m, \n",
       "\u001b[32m\"CRITICAL\"\u001b[0m: \u001b[1;36m0\u001b[0m\u001b[1m}\u001b[0m, \u001b[32m\"total_issues\"\u001b[0m: \u001b[1;36m1\u001b[0m, \u001b[32m\"input_path\"\u001b[0m: \u001b[32m\"./unsafe_model.h5\"\u001b[0m, \n",
-      "\u001b[32m\"absolute_path\"\u001b[0m: \u001b[32m\"/home/adversarial_nik/ai_sec/12-serialization-attacks\"\u001b[0m, \n",
-      "\u001b[32m\"modelscan_version\"\u001b[0m: \u001b[32m\"0.7.6\"\u001b[0m, \u001b[32m\"timestamp\"\u001b[0m: \u001b[32m\"2024-11-05T16:30:38.984803\"\u001b[0m, \n",
+      "\u001b[32m\"absolute_path\"\u001b[0m: \n",
+      "\u001b[32m\"/home/ubuntu/dev/terminating-the-terminator-dev/12-serialization-attacks\"\u001b[0m, \n",
+      "\u001b[32m\"modelscan_version\"\u001b[0m: \u001b[32m\"0.7.6\"\u001b[0m, \u001b[32m\"timestamp\"\u001b[0m: \u001b[32m\"2025-06-08T12:10:41.568500\"\u001b[0m, \n",
       "\u001b[32m\"scanned\"\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m\"total_scanned\"\u001b[0m: \u001b[1;36m1\u001b[0m, \u001b[32m\"scanned_files\"\u001b[0m: \u001b[1m[\u001b[0m\u001b[32m\"unsafe_model.h5\"\u001b[0m\u001b[1m]\u001b[0m\u001b[1m}\u001b[0m\u001b[1m}\u001b[0m, \n",
       "\u001b[32m\"issues\"\u001b[0m: \u001b[1m[\u001b[0m\u001b[1m{\u001b[0m\u001b[32m\"description\"\u001b[0m: \u001b[32m\"Use of unsafe operator 'Lambda' from module \u001b[0m\n",
       "\u001b[32m'Keras'\"\u001b[0m, \u001b[32m\"operator\"\u001b[0m: \u001b[32m\"Lambda\"\u001b[0m, \u001b[32m\"module\"\u001b[0m: \u001b[32m\"Keras\"\u001b[0m, \u001b[32m\"source\"\u001b[0m: \u001b[32m\"unsafe_model.h5\"\u001b[0m, \n",
@@ -367,7 +373,7 @@
    ],
    "source": [
     "# This will save the scan results in file: keras-model-scan-results.json\n",
-    "!modelscan --path  ./unsafe_model.h5 -r json -o keras-model-scan-results.json"
+    "!~/setup/ai-sec-env/bin/modelscan --path  ./unsafe_model.h5 -r json -o keras-model-scan-results.json"
    ]
   },
   {
@@ -394,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.20"
   },
   "vscode": {
    "interpreter": {
